atualizar pagina redaçao nota mil

--- a/redacao_nota_mil.html
+++ b/redacao_nota_mil.html
@@ -53,7 +53,7 @@
     </header>
 
     <main>
-      <h2 class="apresentacao__titulo">Modelo de Redação Nota 1000</h2>
+      <h2 class="apresentacao_titulo_redacao_nota_mil">Modelo de Redação Nota 1000</h2>
       <section>
         <p>
           Alcançar a famosa nota 1.000 na Redação do Enem acaba sendo um grande
@@ -71,7 +71,7 @@
           com dicas valiosas sobre o assunto.
         </p>
       </section>
-      <h3>3 modelos de redação nota mil</h3>
+      <h3 class="apresentacao_titulo-secundario_redacao_nota_mil">3 modelos de redação nota mil</h3>
       <section>
         <p>
           Praticar interpretação de texto, manter-se informado para ter o mínimo
@@ -85,7 +85,7 @@
         <p>
           Quais são os critérios de correção da redação do Enem?
 Para garantir uma redação nota mil, o candidato precisa gabaritar as cinco competências utilizadas na correção:</p>
-<div>
+<div class="lista_competencias">
 <or>
 <li>Competência 1: domínio da escrito formal da Língua Portuguesa;</li>
 <li>Competência 2: compreender o tema e não fugir da proposta;</li>
@@ -96,7 +96,7 @@ Para garantir uma redação nota mil, o candidato precisa gabaritar as cinco com
 </div>
 
 
-<h4>4 redações nota 1000 do Enem 2022</h4>
+<h4 class="apresentacao_titulo-secundario_redacao_nota_mil">4 redações nota 1000 do Enem 2022</h4>
 
         </p>
       </section>
