Implementando CSS na página natureza

--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -9,46 +9,58 @@
   <body>
     <header>
       <nav>
-        <a href="#"
-          ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
-        /></a>
-        <br />
-        <a href="">Sobre nós</a>
-        <a href="">Redação</a>
-        <a href="">Linguagens</a>
-        <a href="">Ciências da Natureza</a>
-        <a href="">Ciências Humanas</a>
-        <a href="">Matemática de suas tecnologias</a>
+        <div class="logo-humanas">
+          <a href="#"
+            ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
+          /></a>
+        </div>
+        <div class="container-lista">
+          <ul class="lista-menu">
+            <li><a href="">Sobre nós</a></li>
+            <li><a href="">Redação</a></li>
+            <li><a href="">Linguagens</a></li>
+            <li><a href="">Ciências da Natureza</a></li>
+            <li><a href="">Ciências Humanas</a></li>
+            <li><a href="">Matemática de suas tecnologias</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
-    <hr />
     <main>
       <section>
-        <h1>Ciências da Natureza: Biologia, Química e Física</h1>
-        <p>
-          O objetivo da prova de Ciências da Natureza não é obrigar você a
-          memorizar fórmulas. Na verdade, as questões querem saber se você
-          consegue usar os conhecimentos dessas matérias em diferentes
-          contextos.
-        </p>
-        <div align="right">
+        <div class="titulo-principal">
+          <h1>Ciências da Natureza: Biologia, Química e Física</h1>
+        </div>
+        <div class="texto-secundario">
+          <p>
+            O objetivo da prova de Ciências da Natureza não é obrigar você a
+            memorizar fórmulas. Na verdade, as questões querem saber se você
+            consegue usar os conhecimentos dessas matérias em diferentes
+            contextos.
+          </p>
+        </div>
+        <div class="imagem-menino">
           <img
             src="./img/menino-braco-cruzado.png"
             alt="menino-braco-cruzado"
             height="300"
           />
         </div>
-        <h2>Áreas Ciências da Natureza?</h2>
-        <p>
-          Ciências da Natureza é o campo da ciência que se dedica ao estudo da
-          natureza e os elementos que a compõe. Também conhecida como ciências
-          naturais, essa área do conhecimento é dividida em outros campos do
-          saber que utilizam variados métodos científicos para estudar a
-          natureza em seus diversos aspectos.
-        </p>
+        <div class="titulo-principal">
+          <h2>Áreas Ciências da Natureza?</h2>
+        </div>
+        <div class="texto-secundario">
+          <p>
+            Ciências da Natureza é o campo da ciência que se dedica ao estudo da
+            natureza e os elementos que a compõe. Também conhecida como ciências
+            naturais, essa área do conhecimento é dividida em outros campos do
+            saber que utilizam variados métodos científicos para estudar a
+            natureza em seus diversos aspectos.
+          </p>
+        </div>
       </section>
       <section>
-        <div align="center">
+        <div class="thumb-secundaria">
           <img
             src="./img/thumb-video-natureza.png"
             alt="thumb-video-natureza"
@@ -56,23 +68,43 @@
           />
           <p>Resumão de ciências da Natureza</p>
         </div>
-        <div align="center">
+        <div class="titulo-materias">
           <h2>Matérias que você deve estudar para o ENEM</h2>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
+        </div>
+        <div class="container-youtube">
+          <ul class="lista-videos">
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
-    <hr />
     <footer>
-      <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      <div class="footer">
+        <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      </div>
     </footer>
   </body>
 </html>
