--- a/Teste_login.html
+++ b/Teste_login.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="Style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
-    <main>
-    <h1><img src="/assets/images/logo_docola_enem.png" alt="logo_decola_enem" width="100" height="100"></h1>
-    <form >
-        <fieldset>
-        
+    <div class="main-login">
+        <div class="formulario">
+            <form action="" method="post">
+                <img class="logo" src="/assets/images/logo_docola_enem.png">
+                <div class="textfield">
+                    <label for="usuario"></label>
+                    <input type="text" name="usuario" placeholder="Digite seu Usuário">
 
-        <label for="User">Usuário</label>
-        <input type="text" id="User" placeholder="Digite seu usuário">
-
-        <label for="Pass">Senha</label>
-        <input type="password" id="Pass" placeholder="Digite sua senha" >
-
-
-
-        <input type="submit" value="Entrar">
-        <button onclick="window.location.href='cadastre.html'">cadastre</button>
-        </fieldset>
-        
-    </form>
-    </main>
+                    <label for="Senha"></label>
+                    <input type="password" name="senha" placeholder="Digite sua Senha">
+                </div>
+                <button class="btn-01">Entrar</button>
+                <p id="text">Ainda não possui conta?</p>
+                <button class="btn-02">Cadastre-se</button>
+                <img class="img-01" src="/assets/images/casal-banner.png"></img>
+            </form>
+        </div>
+    </div>
+    <footer class="rodape-pagina">
+        <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+    </footer>
 </body>
+
 </html>
