Organizando a página de estilos padrão

--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -28,12 +28,12 @@
     </header>
     <main>
       <section>
-        <div class="titulo-principal">
+        <div class="titulo-principal-humanas">
           <h1>
             Ciências humanas: <br />História, Geografia, Filosofia, e Sociologia
           </h1>
         </div>
-        <div class="texto-secundario">
+        <div class="texto-secundario-humanas">
           <p>
             São ciências mais interpretativas e menos exatas, ou seja, não
             <br />
@@ -47,7 +47,7 @@
         </div>
       </section>
       <section>
-        <div class="titulo-materias">
+        <div class="titulo-materias-humanas">
           <h2>Matérias que você deve estudar para o ENEM</h2>
         </div>
         <div class="container-youtube">
@@ -59,6 +59,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
             <li>
               <a href="#"
@@ -67,6 +68,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
             <li>
               <a href="#"
@@ -75,6 +77,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
             <li>
               <a href="#"
@@ -83,10 +86,11 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
           </ul>
         </div>
-        <div class="thumb-secundaria">
+        <div class="thumb-secundaria-humanas">
           <a href="#"
             ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
           /></a>
