--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -28,47 +28,45 @@
     </header>
     <main>
       <section>
-        <div class="titulo-principal">
-          <h1>Ciências da Natureza: Biologia, Química e Física</h1>
-        </div>
-        <div class="texto-secundario">
-          <p>
-            O objetivo da prova de Ciências da Natureza não é obrigar você a
-            memorizar fórmulas. Na verdade, as questões querem saber se você
-            consegue usar os conhecimentos dessas matérias em diferentes
-            contextos.
-          </p>
-        </div>
-        <div class="imagem-menino">
-          <img
-            src="./img/menino-braco-cruzado.png"
-            alt="menino-braco-cruzado"
-            height="300"
-          />
-        </div>
-        <div class="titulo-principal">
-          <h2>Áreas Ciências da Natureza?</h2>
-        </div>
-        <div class="texto-secundario">
-          <p>
-            Ciências da Natureza é o campo da ciência que se dedica ao estudo da
-            natureza e os elementos que a compõe. Também conhecida como ciências
-            naturais, essa área do conhecimento é dividida em outros campos do
-            saber que utilizam variados métodos científicos para estudar a
-            natureza em seus diversos aspectos.
-          </p>
+        <div class="main-section">
+          <div class="titulo-principal-natureza">
+            <h1>Ciências da Natureza: Biologia, Química e Física</h1>
+            <p class="paragrafo-descritivo">
+              O objetivo da prova de Ciências da Natureza não é obrigar você a
+              memorizar fórmulas. Na verdade, as questões querem saber se você
+              consegue usar os conhecimentos dessas matérias em diferentes
+              contextos.
+            </p>
+            <h2 class="titulo-secundario-natureza">
+              Áreas Ciências da Natureza?
+            </h2>
+            <p class="paragrafo-descritivo">
+              Ciências da Natureza é o campo da ciência que se dedica ao estudo
+              da natureza e os elementos que a compõe. Também conhecida como
+              ciências naturais, essa área do conhecimento é dividida em outros
+              campos do saber que utilizam variados métodos científicos para
+              estudar a natureza em seus diversos aspectos.
+            </p>
+          </div>
+          <div class="imagem-menino">
+            <img
+              class="menino"
+              src="./img/menino-braco-cruzado.png"
+              alt="menino-braco-cruzado"
+            />
+          </div>
         </div>
       </section>
       <section>
-        <div class="thumb-secundaria">
+        <div class="thumb-secundaria-natureza">
           <img
             src="./img/thumb-video-natureza.png"
             alt="thumb-video-natureza"
             height="200px"
           />
-          <p>Resumão de ciências da Natureza</p>
         </div>
-        <div class="titulo-materias">
+        <p class="titulo-resumo">Resumão de ciências da Natureza</p>
+        <div class="titulo-materias-natureza">
           <h2>Matérias que você deve estudar para o ENEM</h2>
         </div>
         <div class="container-youtube">
@@ -80,6 +78,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
             <li>
               <a href="#"
@@ -88,6 +87,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
             <li>
               <a href="#"
@@ -96,6 +96,7 @@
                   src="./img/youtube-card.png"
                   alt="youtube-card"
               /></a>
+              <p class="texto-materia">Matéria</p>
             </li>
           </ul>
         </div>
