--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciências da Natureza</title>
   </head>
-  <body>
+  <body class="gradient-background">
     <header>
       <nav>
         <div class="logo-humanas">
