Finalizando estilos padrões

--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -30,7 +30,9 @@
       <section>
         <div class="titulo-principal-humanas">
           <h1>
-            Ciências humanas: <br />História, Geografia, Filosofia, e Sociologia
+            Ciências humanas: <br /><span class="titulo-cor-secundario"
+              >História, Geografia, Filosofia, e Sociologia</span
+            >
           </h1>
         </div>
         <div class="texto-secundario-humanas">
@@ -92,7 +94,11 @@
         </div>
         <div class="thumb-secundaria-humanas">
           <a href="#"
-            ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
+            ><img
+              class="thumb-video-humanas"
+              src="./img/pre-hist.png"
+              alt="pre-hist"
+              height="200"
           /></a>
         </div>
       </section>
