--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -30,7 +30,9 @@
       <section>
         <div class="main-section">
           <div class="titulo-principal-natureza">
-            <h1>Ciências da Natureza: Biologia, Química e Física</h1>
+            <span class="titulo-cor-secundario"
+              ><h1>Ciências da Natureza: Biologia, Química e Física</h1></span
+            >
             <p class="paragrafo-descritivo">
               O objetivo da prova de Ciências da Natureza não é obrigar você a
               memorizar fórmulas. Na verdade, as questões querem saber se você
@@ -38,7 +40,9 @@
               contextos.
             </p>
             <h2 class="titulo-secundario-natureza">
-              Áreas Ciências da Natureza?
+              <span class="titulo-cor-secundario"
+                >Áreas Ciências da Natureza?</span
+              >
             </h2>
             <p class="paragrafo-descritivo">
               Ciências da Natureza é o campo da ciência que se dedica ao estudo
@@ -60,6 +64,7 @@
       <section>
         <div class="thumb-secundaria-natureza">
           <img
+            class="thumb-video-natureza"
             src="./img/thumb-video-natureza.png"
             alt="thumb-video-natureza"
             height="200px"
