--- a/.vscode/linguagens.html
+++ b/.vscode/linguagens.html
@@ -61,18 +61,34 @@
         <p>Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
           relacionados aos conteúdos de língua portuguesa, literatura,língua estrangeira, artes, educação física e tecnologias da informação e comunicação.</p>
         </div>
-        <img src="img/img_estudantes.png" width="300" height="300" alt="left" aling="right">
+        <img src="img/img_estudantes.png" width="500" height="500" alt="left" aling="right">
 
-        <div align="center">
-          <p>Matérias que você deve estudar para o Enem.</p>
-          
-          <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="200"/>
-        </div>
+  
+          <p class="veja_linguagem">Matérias que você deve estudar para o Enem.</p>
+
+          <div class="videos_enem_linguagem">
+
+            <a class="linguagem_um" href="https://youtu.be/n3JwiB-XYP8?si=9F2MytBf_UVZHEKx">
+              <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           </a>
+
+           <a class="linguagem_dois" href="https://youtu.be/8jRs5CZwbQM?si=77cuDlo9cNj_7L9R">
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+          </a>
+
+          <a class="linguagem_tres" href="https://youtu.be/b4sAM4MAkm8?si=oox1mTQ1pqlSGfdR">
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+          </a>
+          <a class="linguagem_quatro" href="https://youtu.be/0Rxrvt34Rm8?si=eURbscPPaTJgt9PH">
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           </a>
+           <a class="linguagem_cinco" href="">
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           </a>
+           <a class="linguagem_seis" href="">
+            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            </a>
+          </div>
        </div>
       </section>
     </main>
