organizando as paginas

--- a/.vscode/linguagens.html
+++ b/.vscode/linguagens.html
@@ -69,24 +69,24 @@
           <div class="videos_enem_linguagem">
 
             <a class="linguagem_um" href="https://youtu.be/n3JwiB-XYP8?si=9F2MytBf_UVZHEKx">
-              <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+              <img src="img/youtube-card.png" height="200"/>
            </a>
 
            <a class="linguagem_dois" href="https://youtu.be/8jRs5CZwbQM?si=77cuDlo9cNj_7L9R">
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            <img src="img/youtube-card.png" height="200"/>
           </a>
 
           <a class="linguagem_tres" href="https://youtu.be/b4sAM4MAkm8?si=oox1mTQ1pqlSGfdR">
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            <img src="img/youtube-card.png" height="200"/>
           </a>
           <a class="linguagem_quatro" href="https://youtu.be/0Rxrvt34Rm8?si=eURbscPPaTJgt9PH">
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            <img src="img/youtube-card.png" height="200"/>
            </a>
-           <a class="linguagem_cinco" href="">
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           <a class="linguagem_cinco" href="https://youtu.be/0Rxrvt34Rm8?si=S-RbkAw1k_ygpvjw">
+            <img src="img/youtube-card.png" height="200"/>
            </a>
-           <a class="linguagem_seis" href="">
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           <a class="linguagem_seis" href="https://youtu.be/cT2zb5JGeq4?si=Y_z7_C5oKezRTdTb">
+            <img src="img/youtube-card.png" height="200"/>
             </a>
           </div>
        </div>
