--- a/.vscode/linguagens.html
+++ b/.vscode/linguagens.html
@@ -57,8 +57,8 @@
         <h1 class="apresentacao_conteudo_titulo"><b>Linguagens, Códigos e suas Tecnologias</b></h1>
         <p class="titulos_de_linguagem"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></p>
 
-       <div align="center">
-        <p>Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
+       <div>
+        <p class="texto_linguagem">Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
           relacionados aos conteúdos de língua portuguesa, literatura,língua estrangeira, artes, educação física e tecnologias da informação e comunicação.</p>
         </div>
         <img src="img/img_estudantes.png" width="500" height="500" alt="left" aling="right">
