--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -9,19 +9,27 @@
   <body class="gradient-background">
     <header>
       <nav>
-        <div class="logo-humanas">
-          <a href="#"
-            ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
-          /></a>
-        </div>
         <div class="container-lista">
           <ul class="lista-menu">
-            <li><a href="">Sobre nós</a></li>
-            <li><a href="">Redação</a></li>
-            <li><a href="">Linguagens</a></li>
-            <li><a href="">Ciências da Natureza</a></li>
-            <li><a href="">Ciências Humanas</a></li>
-            <li><a href="">Matemática de suas tecnologias</a></li>
+            <li>
+              <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Sobre nós</a>
+            </li>
+            <li class="menu-item"><a class="menu-link" href="">Redação</a></li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Linguagens</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Ciências da Natureza</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Ciências Humanas</a>
+            </li>
+            <li class="menu-item">
+              <a href="">Matemática de suas tecnologias</a>
+            </li>
           </ul>
         </div>
       </nav>
