--- a/.vscode/linguagens.html
+++ b/.vscode/linguagens.html
@@ -58,8 +58,8 @@
         <p class="titulos_de_linguagem"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></p>
 
        <div>
-        <p class="texto_linguagem">Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
-          relacionados aos conteúdos de língua portuguesa, literatura,língua estrangeira, artes, educação física e tecnologias da informação e comunicação.</p>
+        <p class="texto_linguagem">Linguagens, códigos e suas tecnologias é a prova do Enem em que são testados conhecimentos relacionados aos conteúdos de língua portuguesa, literatura, língua estrangeira, artes, educação física e tecnologias da informação e comunicação. 
+          O principal objetivo da prova é verificar a capacidade dos(as) participantes de interpretar textos.</p>
         </div>
         <img src="img/img_estudantes.png" width="500" height="500" alt="left" aling="right">
 
