--- a/.vscode/matematica.html
+++ b/.vscode/matematica.html
@@ -52,7 +52,7 @@
         </ul>
       </header>
       <main>
-        <h1><p>Matemática e suas tecnologias</h1>
+        <h1 class="titulo_matematica"> Matemática e suas tecnologias</h1>
          <section class="apresentacao_conteudo_matematica">
             <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental.
              <br> Mas nem sempre precisa ser desta forma, Assim como a língua portuguesa,para a nossa comunicação,
