atualizar pag. linguagem e matematica

--- a/matematica.html
+++ b/matematica.html
@@ -108,8 +108,10 @@
           href="https://www.youtube.com/watch?v=uaYFrtduFmI&pp=ygUPbWF0ZW1hdGljYSBlbmVt"
         >
           <img
-          class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card"
-          height="200"/>
+            class="imagem_youtube"
+            src="/img/youtube-card.png"
+            height="200"
+          />
         </a>
 
         <a
@@ -117,8 +119,10 @@
           href="https://www.youtube.com/watch?v=C9FO0EAbKWA&t=26s&pp=ygU1cHJpbmNpcGFpcyBjb250ZXVkb3MgZGUgbWF0ZW1hdGljYSBlbmVtIG8gcXVlIGVzdHVkYXI%3D"
         >
           <img
-          class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card"
-          height="200"/>
+            class="imagem_youtube"
+            src="/img/youtube-card.png"
+            height="200"
+          />
         </a>
 
         <a
@@ -126,13 +130,15 @@
           href="https://www.youtube.com/watch?v=BUn4sHmT4jg&pp=ygU6cHJpbmNpcGFpcyBjb250ZXVkb3MgZGUgbWF0ZW1hdGljYSBlbmVtIG8gcXVlIGVzdHVkYXIgMjAyNA%3D%3D"
         >
           <img
-          class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card"
-          height="200"/>
+            class="imagem_youtube"
+            src="/img/youtube-card.png"
+            height="200"
+          />
         </a>
       </div>
     </main>
     <footer class="rodape__pagina">
-      <h4>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</h4>
+      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
     </footer>
   </body>
 </html>
