--- a/Redação.html
+++ b/Redação.html
@@ -8,26 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="/estilo.css">
-    <div>
-        <nav class="login-cadastro">
-            <a class="link-login" href="login.html">Login </a>
-            <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-    </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="/assets/images/logo_docola_enem.png" href="home.html" width="150" height="125"> </a>
 </head>
-    <body>
-    </div>
-        <header class="cabecalho"> 
-                <nav cabecalho__menu>
-                        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-                        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-                        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-                        <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
-                        <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
-                        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-                </nav> 
-        </header>
+    <header>
+        <nav>
+            <div class="container-lista">
+                <ul class="lista-menu">
+                    <li>
+                        <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="">Sobre nós</a>
+                    </li>
+                    <li class="menu-item"><a class="menu-link" href="">Redação</a></li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="">Linguagens</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="">Ciências da Natureza</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="">Ciências Humanas</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="">Matemática de suas tecnologias</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
         
         <main class="main-redacao"> 
             
