--- a/Redação.html
+++ b/Redação.html
@@ -9,12 +9,13 @@
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="/estilo.css">
 </head>
+<body>
     <header>
         <nav>
             <div class="container-lista">
                 <ul class="lista-menu">
                     <li>
-                        <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
+                        <img src="/assets/images/logo_docola_enem.png" alt="logo" height="200px" />
                     </li>
                     <li class="menu-item">
                         <a class="menu-link" href="">Sobre nós</a>
