--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles_humanas_natureza.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciências da Natureza</title>
   </head>
