--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -15,20 +15,26 @@
               <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="">Sobre nós</a>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="">Redação</a></li>
-            <li class="menu-item">
-              <a class="menu-link" href="">Linguagens</a>
+              <a class="menu-link" href="sobre_nos.html">Sobre nós</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="">Ciências da Natureza</a>
+              <a class="menu-link" href="redacao.html">Redação</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="">Ciências Humanas</a>
+              <a class="menu-link" href="linguagens.html">Linguagens</a>
             </li>
             <li class="menu-item">
-              <a href="">Matemática de suas tecnologias</a>
+              <a class="menu-link" href="ciencias_natureza.html"
+                >Ciências da Natureza</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="ciencias_humanas.html"
+                >Ciências Humanas</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="matematica.html">Matemática de suas tecnologias</a>
             </li>
           </ul>
         </div>
