Adicionando ícone das ciencias da natureza

--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -12,7 +12,7 @@
         <div class="container-lista">
           <ul class="lista-menu">
             <li>
-              <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
+              <img src="img/icone_cie_natureza.png" alt="logo" height="100px" />
             </li>
             <li class="menu-item">
               <a class="menu-link" href="sobre_nos.html">Sobre nós</a>
