--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -2,76 +2,125 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles_humanas_natureza.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciências Humanas</title>
   </head>
-  <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-      </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="100"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+  <body class="gradient-background">
+    <header>
+      <nav>
+        <div class="container-lista">
+          <ul class="lista-menu">
+            <li>
+              <img src="img/icone_cie_humanas.png" alt="logo" height="100px" />
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="sobre_nos.html">Sobre nós</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="redacao.html">Redação</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="linguagens.html">Linguagens</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="ciencias_natureza.html"
+                >Ciências da Natureza</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="ciencias_humanas.html"
+                >Ciências Humanas</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="matematica.html">Matemática de suas tecnologias</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
-    <hr />
     <main>
       <section>
-        <h1>Ciências humanas: História, Geografia, Filosofia, e Sociologia</h1>
-        <p>
-          São ciências mais interpretativas e menos exatas, ou seja, não existe
-          fórmula. O que se faz geralmente é, a partir de métodos científicos,
-          observar as características humanas e determinar padrões. Alguns
-          exemplos de disciplinas humanas são Sociologia, História e Geografia.
-        </p>
+        <div class="titulo-principal-humanas">
+          <h1>
+            Ciências humanas: <br /><span class="titulo-cor-secundario"
+              >História, Geografia, Filosofia, e Sociologia</span
+            >
+          </h1>
+        </div>
+        <div class="texto-secundario-humanas">
+          <p>
+            São ciências mais interpretativas e menos exatas, ou seja, não
+            <br />
+            existe fórmula. O que se faz geralmente é, a partir de métodos
+            <br />
+            científicos, observar as características humanas e determinar
+            padrões. <br />
+            Alguns exemplos de disciplinas humanas são Sociologia, História e
+            Geografia.
+          </p>
+        </div>
       </section>
       <section>
-        <div align="center">
+        <div class="titulo-materias-humanas">
           <h2>Matérias que você deve estudar para o ENEM</h2>
+        </div>
+        <div class="container-youtube">
+          <ul class="lista-videos">
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+          </ul>
+        </div>
+        <div class="thumb-secundaria-humanas">
           <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <br />
-          <br />
-          <a href="#"
-            ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
+            ><img
+              class="thumb-video-humanas"
+              src="./img/pre-hist.png"
+              alt="pre-hist"
+              height="200"
           /></a>
         </div>
       </section>
     </main>
-    <hr />
     <footer>
-      <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      <div class="footer">
+        <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      </div>
     </footer>
   </body>
 </html>
