--- a/ciencias_natureza.html
+++ b/ciencias_natureza.html
@@ -2,91 +2,129 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles_humanas_natureza.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ciências da Natureza</title>
   </head>
-  <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-      </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="100"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
+  <body class="gradient-background">
+    <header>
+      <nav>
+        <div class="container-lista">
+          <ul class="lista-menu">
+            <li>
+              <img src="img/icone_cie_natureza.png" alt="logo" height="100px" />
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="sobre_nos.html">Sobre nós</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="redacao.html">Redação</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="linguagens.html">Linguagens</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="ciencias_natureza.html"
+                >Ciências da Natureza</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="ciencias_humanas.html"
+                >Ciências Humanas</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="matematica.html">Matemática de suas tecnologias</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
-    <hr />
     <main>
       <section>
-        <h1>Ciências da Natureza: Biologia, Química e Física</h1>
-        <p>
-          O objetivo da prova de Ciências da Natureza não é obrigar você a
-          memorizar fórmulas. Na verdade, as questões querem saber se você
-          consegue usar os conhecimentos dessas matérias em diferentes
-          contextos.
-        </p>
-        <div align="right">
-          <img
-            src="./img/menino-braco-cruzado.png"
-            alt="menino-braco-cruzado"
-            height="300"
-          />
+        <div class="main-section">
+          <div class="titulo-principal-natureza">
+            <span class="titulo-cor-secundario"
+              ><h1>Ciências da Natureza: Biologia, Química e Física</h1></span
+            >
+            <p class="paragrafo-descritivo">
+              O objetivo da prova de Ciências da Natureza não é obrigar você a
+              memorizar fórmulas. Na verdade, as questões querem saber se você
+              consegue usar os conhecimentos dessas matérias em diferentes
+              contextos.
+            </p>
+            <h2 class="titulo-secundario-natureza">
+              <span class="titulo-cor-secundario"
+                >Áreas Ciências da Natureza?</span
+              >
+            </h2>
+            <p class="paragrafo-descritivo">
+              Ciências da Natureza é o campo da ciência que se dedica ao estudo
+              da natureza e os elementos que a compõe. Também conhecida como
+              ciências naturais, essa área do conhecimento é dividida em outros
+              campos do saber que utilizam variados métodos científicos para
+              estudar a natureza em seus diversos aspectos.
+            </p>
+          </div>
+          <div class="imagem-menino">
+            <img
+              class="menino"
+              src="./img/menino-braco-cruzado.png"
+              alt="menino-braco-cruzado"
+            />
+          </div>
         </div>
-        <h2>Áreas Ciências da Natureza?</h2>
-        <p>
-          Ciências da Natureza é o campo da ciência que se dedica ao estudo da
-          natureza e os elementos que a compõe. Também conhecida como ciências
-          naturais, essa área do conhecimento é dividida em outros campos do
-          saber que utilizam variados métodos científicos para estudar a
-          natureza em seus diversos aspectos.
-        </p>
       </section>
       <section>
-        <div align="center">
+        <div class="thumb-secundaria-natureza">
           <img
+            class="thumb-video-natureza"
             src="./img/thumb-video-natureza.png"
             alt="thumb-video-natureza"
             height="200px"
           />
-          <p>Resumão de ciências da Natureza</p>
         </div>
-        <div align="center">
+        <p class="titulo-resumo">Resumão de ciências da Natureza</p>
+        <div class="titulo-materias-natureza">
           <h2>Matérias que você deve estudar para o ENEM</h2>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
+        </div>
+        <div class="container-youtube">
+          <ul class="lista-videos">
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+              <p class="texto-materia">Matéria</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
-    <hr />
     <footer>
-      <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      <div class="footer">
+        <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      </div>
     </footer>
   </body>
 </html>
