Button da pagina redação não estava funcionando, já atualizado

--- a/redação/redacao.html
+++ b/redação/redacao.html
@@ -120,7 +120,7 @@
 
         <section class="redacao1000">
             <p>Modelo de redações nota 1000 do Enem para você se inspirar!</p>
-            <button class="btn"><a href="/redacao_nota_mil.html" target="_blank"></a>Ver Redações</button>
+            <a href="/redacao_nota_mil.html"><button class="btn">Ver Redações</button></a>
         </section>
     </main>
 
